added clustered to results graph

--- a/repartition_experiments/notebooks/graph-case 3 adding clustered.ipynb
+++ b/repartition_experiments/notebooks/graph-case 3 adding clustered.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,86 +59,86 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>case 1_0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>case 3_1</td>\n",
+       "      <td>1</td>\n",
        "      <td>keep</td>\n",
-       "      <td>344.609428</td>\n",
-       "      <td>0.046494</td>\n",
-       "      <td>248.035114</td>\n",
-       "      <td>51.531926</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1339843750</td>\n",
+       "      <td>524.220660</td>\n",
+       "      <td>0.055125</td>\n",
+       "      <td>246.248566</td>\n",
+       "      <td>215.427121</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>3062500000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>case 1_2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>case 3_0</td>\n",
+       "      <td>0</td>\n",
        "      <td>keep</td>\n",
-       "      <td>353.606750</td>\n",
-       "      <td>0.730150</td>\n",
-       "      <td>233.167324</td>\n",
-       "      <td>43.201751</td>\n",
-       "      <td>343</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5464000000</td>\n",
+       "      <td>456.492896</td>\n",
+       "      <td>0.019945</td>\n",
+       "      <td>201.850955</td>\n",
+       "      <td>218.254769</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>128</td>\n",
+       "      <td>128</td>\n",
+       "      <td>8575000000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>case 1_6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>keep</td>\n",
-       "      <td>345.300527</td>\n",
-       "      <td>0.886776</td>\n",
-       "      <td>237.140795</td>\n",
-       "      <td>68.625658</td>\n",
-       "      <td>700</td>\n",
+       "      <td>case 3_1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>baseline</td>\n",
+       "      <td>1262.964655</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>245.884660</td>\n",
+       "      <td>1016.631382</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>122500000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
-       "      <td>400</td>\n",
        "      <td>0</td>\n",
-       "      <td>566562500</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>case 1_6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>case 3_1</td>\n",
+       "      <td>1</td>\n",
        "      <td>keep</td>\n",
-       "      <td>349.540469</td>\n",
-       "      <td>0.889951</td>\n",
-       "      <td>237.432919</td>\n",
-       "      <td>70.203476</td>\n",
-       "      <td>700</td>\n",
-       "      <td>0</td>\n",
-       "      <td>400</td>\n",
-       "      <td>0</td>\n",
-       "      <td>566562500</td>\n",
+       "      <td>528.296810</td>\n",
+       "      <td>0.053063</td>\n",
+       "      <td>248.742093</td>\n",
+       "      <td>215.036179</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>3062500000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>case 1_5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>keep</td>\n",
-       "      <td>331.543036</td>\n",
-       "      <td>0.295608</td>\n",
-       "      <td>227.910237</td>\n",
-       "      <td>45.034036</td>\n",
-       "      <td>196</td>\n",
+       "      <td>case 3_1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>clustered</td>\n",
+       "      <td>434.217590</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>259.439418</td>\n",
+       "      <td>87.705829</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6650</td>\n",
+       "      <td>1700</td>\n",
        "      <td>0</td>\n",
-       "      <td>400</td>\n",
        "      <td>0</td>\n",
-       "      <td>5337500000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -146,35 +146,35 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 case_name  run_ref model  process_time  preprocess_time  \\\n",
-       "0           0  case 1_0        0  keep    344.609428         0.046494   \n",
-       "1           0  case 1_2        2  keep    353.606750         0.730150   \n",
-       "2           0  case 1_6        6  keep    345.300527         0.886776   \n",
-       "3           0  case 1_6        6  keep    349.540469         0.889951   \n",
-       "4           0  case 1_5        5  keep    331.543036         0.295608   \n",
+       "   Unnamed: 0 case_name  run_ref      model  process_time  preprocess_time  \\\n",
+       "0           0  case 3_1        1       keep    524.220660         0.055125   \n",
+       "1           0  case 3_0        0       keep    456.492896         0.019945   \n",
+       "2           0  case 3_1        1   baseline   1262.964655         0.000000   \n",
+       "3           0  case 3_1        1       keep    528.296810         0.053063   \n",
+       "4           0  case 3_1        1  clustered    434.217590         0.000000   \n",
        "\n",
-       "    read_time  write_time  outfile_openings  outfile_seeks  infile_openings  \\\n",
-       "0  248.035114   51.531926                32              0               64   \n",
-       "1  233.167324   43.201751               343              0             1000   \n",
-       "2  237.140795   68.625658               700              0              400   \n",
-       "3  237.432919   70.203476               700              0              400   \n",
-       "4  227.910237   45.034036               196              0              400   \n",
+       "    read_time   write_time  outfile_openings  outfile_seeks  infile_openings  \\\n",
+       "0  246.248566   215.427121                14             14             2200   \n",
+       "1  201.850955   218.254769                 5              5              128   \n",
+       "2  245.884660  1016.631382              1000      122500000             1000   \n",
+       "3  248.742093   215.036179                14             14             2200   \n",
+       "4  259.439418    87.705829                20           6650             1700   \n",
        "\n",
        "   infile_seeks  max_voxels  success  \n",
-       "0             0  1339843750     True  \n",
-       "1             0  5464000000     True  \n",
-       "2             0   566562500     True  \n",
-       "3             0   566562500     True  \n",
-       "4             0  5337500000     True  "
+       "0          2200  3062500000     True  \n",
+       "1           128  8575000000     True  \n",
+       "2             0           0     True  \n",
+       "3          2200  3062500000     True  \n",
+       "4             0           0     True  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_path = '/home/user/Desktop/results_cluster/run_3/case_1/graphs/results.csv'\n",
+    "results_path = '/home/user/Desktop/results_cluster/run_6/case_3/graphs/results.csv'\n",
     "case_name = 'case 1'\n",
     "df = pd.read_csv(results_path)\n",
     "df_seeks = pd.read_csv(results_path)\n",
