Added grid to figure, saved to pdf

--- a/results/Untitled1.ipynb
+++ b/results/Untitled1.ipynb
@@ -53,6 +53,8 @@
    ],
    "source": [
     "fig, (ax1, ax2, ax3) = plt.subplots(1,3,figsize=(15, 8), sharey=True)\n",
+    "for ax in (ax1, ax2, ax3):\n",
+    "    ax.grid(True, axis='x', which='major', color='black', alpha=0.2, zorder=0\n",
     "\n",
     "def compute_graph(results_path, ax, title, legend=False, first=False):\n",
     "    df = pd.read_csv(results_path)\n",
@@ -122,12 +124,12 @@
     "\n",
     "    \n",
     "import matplotlib.patches as mpatches\n",
-    "p1 = mpatches.Patch(color='darkgreen', label='outblock openings')\n",
-    "p2 = mpatches.Patch(color='olive', label='outblock seeks')\n",
-    "p3 = mpatches.Patch(color='darkblue', label='inblock openings')\n",
-    "p4 = mpatches.Patch(color='cyan', label='inblock seeks')\n",
-    "p5 = mpatches.Patch(color='black', label='keep (solid colors)')\n",
-    "p6 = mpatches.Patch(color='black', alpha=0.3, label='baseline (transparent colors)')\n",
+    "p1 = mpatches.Patch(color='darkgreen', label='Outblock openings')\n",
+    "p2 = mpatches.Patch(color='olive', label='Outblock seeks')\n",
+    "p3 = mpatches.Patch(color='darkblue', label='Inblock openings')\n",
+    "p4 = mpatches.Patch(color='cyan', label='Inblock seeks')\n",
+    "p5 = mpatches.Patch(color='black', label='Keep (solid colors)')\n",
+    "p6 = mpatches.Patch(color='black', alpha=0.3, label='Baseline (transparent colors)')\n",
     "plt.legend(handles=[p1, p2, p3, p4, p5, p6], ncol=6, bbox_to_anchor=(1., 1.2))\n",
     "    "
    ]
@@ -156,9 +158,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (thesis)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "thesis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -170,7 +172,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
