--- a/results/Untitled.ipynb
+++ b/results/Untitled.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7185efae90>"
+       "<matplotlib.legend.Legend at 0x7fa6e98b7c10>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -181,6 +181,20 @@
     "p6 = mpatches.Patch(color='black', alpha=0.3, label='baseline (transparent colors)')\n",
     "plt.legend(handles=[p1, p2, p3, p4, p5, p6], ncol=6, bbox_to_anchor=(0.7, 1.2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
